# math-algorithm-book

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
codes/python/: Code_2_01_1.py  Code_2_01_2.py  Code_2_01_3.py  Code_2_01_4.py  Code_2_02_1.py  Code_2_02_2.py  Code_2_03_1.py  Code_2_04_2.py  Code_2_04_3.py  Code_2_06_1.py  Code_3_01_1.py  Code_3_01_2.py  Code_3_01_3.py  Code_3_02_1.py  Code_3_02_2.py  Code_3_03_1.py  Code_3_04_1.py  Code_3_04_2.py  Code_3_05_1.py  Code_3_06_1.py  Code_3_06_2.py  Code_3_06_3.py  Code_3_06_4.py  Code_3_06_5.py  Code_3_06_6.py  Code_3_07_1.py  Code_3_07_2.py  Code_3_07_3.py  Code_3_08_1.py  Code_4_01_1.py  Code_4_02_1.py  Code_4_02_2.py  Code_4_03_1.py  Code_4_04_1.py  Code_4_05_1.py  Code_4_05_2.py  Code_4_05_3.py  Code_4_06_1.py  Code_4_06_2.py  Code_4_06_3.py  (+20 more)
editorial/chap2-5/: prob2-5-3.py  prob2-5-4.py
editorial/chap3-1/: prob3-1-2.py
editorial/chap3-2/: prob3-2-2.py  prob3-2-3.py
editorial/chap3-3/: prob3-3-3.py  prob3-3-4.py  prob3-3-5.py  prob3-3-6.py
editorial/chap3-4/: prob3-4-3.py  prob3-4-4.py
editorial/chap3-5/: prob3-5-2.py
editorial/chap3-6/: prob3-6-3.py
editorial/chap3-7/: prob3-7-4.py  prob3-7-6.py
editorial/chap4-1/: prob4-1-2.py  prob4-1-3.py  prob4-1-4.py  prob4-1-5.py
editorial/chap4-2/: prob4-2-1.py  prob4-2-2.py
editorial/chap4-3/: prob4-3-2.py  prob4-3-3.py
editorial/chap4-4/: prob4-4-2.py  prob4-4-3.py  prob4-4-3_fast.py  prob4-4-4.py
editorial/chap4-6/: prob4-6-2.py  prob4-6-3.py
editorial/chap4-7/: prob4-7-2.py  prob4-7-3.py  prob4-7-4.py
